Actions
Bug #6299
closedSATA inquiry property generation doesn't work as advertised
Start date:
2015-10-08
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
The SATA code generates inquiry properties using the model name of a SATA device. It tries to split the model name into vendor and product ID strings at the first whitespace separating the two.
The code thats splitting the model string into vendor and product ID strings doesn't work right when the model string does not start with a vendor name. These are the inquiry properties generated for a Seagate disk, which illustrate the problem:
name='inquiry-revision-id' type=string items=1 value='2AR10002' name='inquiry-product-id' type=string items=1 value='HN-M101MBB' name='inquiry-vendor-id' type=string items=1 value='ST1000LM024'
mpt_sas contains a copy of that code which also needs fixing.
Updated by Electric Monk almost 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 0c6eaab480b44a0c790ad94e7cb6084792411de9
commit 0c6eaab480b44a0c790ad94e7cb6084792411de9 Author: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Date: 2015-11-05T16:59:00.000Z 6299 SATA inquiry property generation doesn't work as advertised Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Josef 'Jeff' Sipek <josef.sipek@nexenta.com>
Actions